<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insurance Marketplace</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="signin_button">Sign In</string>
    <string name="newUser_button">New User</string>
    <string name="browse_button">Browse Plans</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="finish_button">Finish</string>
    <string name="apply_button">Apply for benefits</string>
    <string name="checkStatus_button">Check Status</string>
    <string name="signout_button">Sign out</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_successful_login">You are logged in now</string>
    <string name="Marketplace_logo">Logo</string>
    <string name="title_activity_apply_for_benefits">Apply for Benefits</string>
    <string name="title_activity_family_info">Family Information</string>
    
    <string name="checkStatus">Please find below the status of your application: </string>
    <string name="title_activity_check_status">Check Status</string>

</resources>